--- a/css/klient-signup.css
+++ b/css/klient-signup.css
@@ -7,7 +7,7 @@ html, body {
     justify-content: center;
     align-items: center;
 
-    background-image: url('artist.jpeg');
+    background-image: url('../img/artist.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
