--- a/css/signup.css
+++ b/css/signup.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    background-image: url('Sign Up.jpeg');
+    background-image: url('../img/Sign Up.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
