--- a/css/verify.css
+++ b/css/verify.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
-    overflow: hidden; /* pa scroll */
+    overflow: hidden;
 }
 
 body {
