funksionaliteti Forgot Password

--- a/css/login.css
+++ b/css/login.css
@@ -78,3 +78,18 @@ h1 {
     height: 18px;
     cursor: pointer;
 }
+
+.forgot-password {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.forgot-password a {
+    color: blue;
+    text-decoration: underline;
+}
+
+.forgot-password a:hover {
+    text-decoration: none;
+}
+
