--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -49,7 +48,6 @@ header {
     transform: scale(1.05);
 }
 
-
 main {
     padding: 20px 40px;
     display: flex;
@@ -57,13 +55,11 @@ main {
     gap: 50px;
 }
 
-
 .gallery {
     display: flex;
     justify-content: center;
     gap: 30px;
 }
-
 
 .art-item {
     position: relative;
@@ -123,7 +119,6 @@ main {
     padding-bottom: 10px;
 }
 
-
 .artist {
     flex: 0 0 auto;
     display: flex;
@@ -152,12 +147,10 @@ main {
     color: #333;
 }
 
-
 .artist:hover img {
     transform: scale(1.1);
     box-shadow: 0 4px 15px rgba(0,0,0,0.3);
 }
-
 
 .artists-container::-webkit-scrollbar {
     height: 8px;
@@ -171,7 +164,6 @@ main {
 .artists-container::-webkit-scrollbar-track {
     background-color: #eee;
 }
-
 
 .works-section {
     padding: 40px;
@@ -193,13 +185,12 @@ main {
     justify-content: center;
 }
 
-
 .work-item {
     width: 250px;
     background-color: #f5f5f5;
     border-radius: 15px;
     overflow: hidden;
-    cursor: pointer;
+    cursor: default;
     transition: transform 0.3s, box-shadow 0.3s;
     display: flex;
     flex-direction: column;
@@ -230,7 +221,6 @@ main {
     transform: scale(1.05);
 }
 
-
 .work-info {
     padding: 15px;
     display: flex;
@@ -255,20 +245,22 @@ main {
     color: #333;
 }
 
-
-.add-cart {
-    padding: 8px;
-    margin-top: 5px;
-    background-color: #333;
+/* BUTONI DETAILS */
+.details-btn {
+    padding: 10px 15px;
+    margin-top: 10px;
+    background-color: #2b2e2b;
     color: #fff;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
+    font-weight: bold;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, transform 0.2s;
 }
 
-.add-cart:hover {
-    background-color: #555;
+.details-btn:hover {
+    background-color: #292c29;
+    transform: translateY(-2px);
 }
 
 footer {
